[tool.poetry]
name = "rasa-server"
version = "0.1.0"
description = ""
authors = ["Humble Penguin <humblepenguinoffical@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
