[tool.poetry]
name = "rasa-server"
version = "0.1.0"
description = ""
authors = ["Humble Penguin <humblepenguinoffical@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
flask = "^2.3.2"
rasa = "^3.6.4"
py2neo = "^2021.2.3"
spacy = "^3.6.0"
rasa-sdk = "^3.6.1"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
